--- a/capolavoro/src/app/not-found.module.css
+++ b/capolavoro/src/app/not-found.module.css
@@ -2,10 +2,40 @@
     height: 100vh;
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
-    background-image: url('/img/van3.jpg');
+    background-image: url('/img/404.png');
     background-repeat: no-repeat;
     background-size: cover;
     color: white;
+    padding-top: 4vw;
+}
+
+.mainContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 6vw;
+}
+
+.title{
+    display: flex;
+    gap: 1.3vw;
+    font-weight: 900;
+    font-size: 4.5vw;
+}
+
+.error {
+    font-size: 1.4vw;
+}
+
+.subTitle {
+    display: flex;
+    font-size: .9vw;
+    gap: .8vw;
+    color: rgb(230, 230, 230);
+}
+
+.back {
+    font-size: 1vw;
+    font-weight: 800;
 }
