--- a/capolavoro/src/components/Home/About/About.module.scss
+++ b/capolavoro/src/components/Home/About/About.module.scss
@@ -1,10 +1,19 @@
+.contentWrapper {
+    top: 0;
+    right: 0;
+    position: fixed;
+    display: flex;
+    align-items: center;
+
+    height: 100vh;
+    background-color: #1b1b1a;
+}
+
 .contentContainer {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
-    background-color: #1b1b1a;
-    width: 40%;
     padding: 0 13vw 0 13vw;
     color: white;
 
