fix: small fix to About components

--- a/capolavoro/src/components/Home/About/About.module.scss
+++ b/capolavoro/src/components/Home/About/About.module.scss
@@ -57,6 +57,10 @@
         font-size: .8vw;
         font-weight: 300;
         max-width: 16vw;
+        
+        .ExParagraf {
+            margin-bottom: 1.5vw;
+        }
     }
 }
 
