feat: added logic to imgContainer

--- a/capolavoro/src/components/Home/Gallery/ImgGallery/ImgGalleryContainer.module.scss
+++ b/capolavoro/src/components/Home/Gallery/ImgGallery/ImgGalleryContainer.module.scss
@@ -1,5 +1,6 @@
 .card {
     margin-bottom: 1vw;
+    width: 20vw;
     
     .imgContainer {
         overflow: none;
@@ -24,4 +25,8 @@
         line-height: .8vw;
     
     }
+}
+
+.prova1 {
+    background-color: red;
 }
