--- a/capolavoro/src/components/Home/Gallery/Gallery.module.scss
+++ b/capolavoro/src/components/Home/Gallery/Gallery.module.scss
@@ -3,8 +3,14 @@
     width: 100%;
     background-color: #1b1b1a;
     overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
 
     ::-webkit-scrollbar {
         display: none; 
+    }
+
+    .img {
+        align-items: flex-end;
     }
 }
